mudanças no index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <title>Responsivo</title>
+    <meta name="author" content="Vinicius Lopes">
+    <title>Site Responsivo</title>
+    
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     
     <link href="iconmoon/style.css" rel="stylesheet">
